refactor server.js to use PORT from .env and clean up code structure

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URL=mongodb+srv://imeshfsdinfo:7ZAckNysaXZMnNOl@cluster0.hoptk2q.mongodb.net/Producthub?retryWrites=true&w=majority&appName=Cluster0
-
+PORT=5500
 # DB connection string
 # username: imeshfsdinfo
 # password: 7ZAckNysaXZMnNOl
